# surfe

./: .gitignore  CHANGELOG.md  CMakeLists.txt  pyproject.toml  setup.py
.github/workflows/: autorelease.yml  ccpp.yml  conda_publish.yml  pypi.yml
.github/workflows/scripts/: prepare_build.sh
conda/: meta.yaml
surfepy/: __init__.py  pybindings.cpp
test/: test_import.py
